syntax = "proto3";

enum RustySecretsVersions {
	INITIAL_RELEASE = 0;
}

message RustySecret {
	RustySecretsVersions version = 1;
	bytes secret = 2;
	string mime_type = 3;
}
